Add rc.conf file path management using conf file

--- a/doc/nmdaemon.conf
+++ b/doc/nmdaemon.conf
@@ -7,5 +7,5 @@ socket_mod=660
 stderr_log_level=INFO
 #stderr_log_level=WARNING
 
-[rcconf]
-rcconf_file=/etc/rc.conf
+[SYSTEM]
+rcconf_file=../doc/rc.conf
