--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set_property(TARGET sockpp PROPERTY IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_L
 
 add_executable(nmdaemon
         src/addr.cpp
-        src/address_ip4.cpp
+        src/addressip4.cpp
         src/address_ip6.cpp
         src/address_link.cpp
         src/dummy_worker.cpp
