--- a/src/config.h.in
+++ b/src/config.h.in
@@ -5,5 +5,6 @@
 #define VERSION_MINOR "@VERSION_MINOR@"
 #define VERSION_PATCH "@VERSION_PATCH@"
 #define SOFTWARE_VERSION "@SOFTWARE_VERSION@"
+#define WORKERS_NUM "@WORKERS_NUM@"
 
 #endif // CONFIG_H_IN
