--- a/doc/rc.conf
+++ b/doc/rc.conf
@@ -1,9 +1,10 @@
 ifconfig_em0="inet 192.168.212.215 netmask 255.255.255.0"
-ifconfig_em0_aliases="inet 10.2.0.252 netmask 0xfffff000"
+ifconfig_em0_alias0="inet 192.168.212.102 netmask 255.255.255.0"
+ifconfig_em0_alias1="inet 192.168.212.202 netmask 0xffffff00"
 ifconfig_em0_21="inet 10.255.0.252 netmask 0xfffffff0"
 defaultrouter="192.168.212.1"
 ifconfig_em1="inet 192.168.213.211 netmask 255.255.255.0"
-ifconfig_em1_aliases="inet 192.168.213.212/24 inet 10.0.0.252 netmask 255.255.0.0 inet 10.1.0.252 netmask 0xffff0000"
+#ifconfig_em1_aliases="inet 192.168.213.212/24 inet 10.0.0.252 netmask 255.255.0.0 inet 10.1.0.252 netmask 0xffff0000"
 static_routes="netcenter srvlocal srvnet"
 route_netcenter="-net 192.168.32.0/24 192.168.213.252"
 route_limonest="-net 192.168.132.0/24 192.168.213.251"
