Fix writing IP config to rc.conf

--- a/doc/rc.conf
+++ b/doc/rc.conf
@@ -1,25 +1,25 @@
-ifconfig_em0="inet 192.168.212.215 netmask 255.255.255.0"
-ifconfig_em0_alias0="inet 192.168.212.102 netmask 255.255.255.0"
-ifconfig_em0_alias1="inet 192.168.212.202 netmask 0xffffff00"
-ifconfig_em0_21="inet 10.255.0.252 netmask 0xfffffff0"
-defaultrouter="192.168.212.1"
-ifconfig_em1="inet 192.168.213.211 netmask 255.255.255.0"
 #ifconfig_em1_aliases="inet 192.168.213.212/24 inet 10.0.0.252 netmask 255.255.0.0 inet 10.1.0.252 netmask 0xffff0000"
-static_routes="netcenter srvlocal srvnet"
-route_netcenter="-net 192.168.32.0/24 192.168.213.252"
-route_limonest="-net 192.168.132.0/24 192.168.213.251"
-route_srvlocal="-host 99.111.254.50 -iface lo0"
-route_srvnet="-host 191.1.200.4 192.168.213.254"
+defaultrouter="192.168.212.1"
 gateway_enable="YES"
-wlans_iwn0="wlan0"
-ifconfig_tun0="DHCP"
-ifconfig_tun1="DHCP"
-ifconfig_wlan0="WPA SYNCDHCP"
-ifconfig_usbus0="SYNCDHCP"
-ifconfig_usbus1="SYNCDHCP"
 ifconfig_bridge1="SYNCDHCP"
+ifconfig_em0="inet 192.168.212.215 netmask 255.255.255.0"
+ifconfig_em0_21="inet 10.255.0.252 netmask 0xfffffff0"
+ifconfig_em0_21_aliases="inet 10.255.0.252 netmask 255.255.255.240 inet 10.255.1.252 netmask 255.255.255.240"
+ifconfig_em0_aliases="inet 192.168.212.102 netmask 255.255.255.0 inet 192.168.212.202 netmask 255.255.255.0"
+ifconfig_em1="inet 192.168.213.211 netmask 255.255.255.0"
 ifconfig_epair1a="SYNCDHCP"
 ifconfig_epair2a="SYNCDHCP"
 ifconfig_ipsec0="SYNCDHCP"
-wlans_rtwn0="wlan1"
+ifconfig_tun0="DHCP"
+ifconfig_tun1="DHCP"
+ifconfig_usbus0="SYNCDHCP"
+ifconfig_usbus1="SYNCDHCP"
+ifconfig_wlan0="WPA SYNCDHCP"
 ifconfig_wlan1="WPA SYNCDHCP"
+route_limonest="-net 192.168.132.0/24 192.168.213.251"
+route_netcenter="-net 192.168.32.0/24 192.168.213.252"
+route_srvlocal="-host 99.111.254.50 -iface lo0"
+route_srvnet="-host 191.1.200.4 192.168.213.254"
+static_routes="netcenter srvlocal srvnet"
+wlans_iwn0="wlan0"
+wlans_rtwn0="wlan1"
