Add rc.d script

--- a/doc/nmdaemon.conf
+++ b/doc/nmdaemon.conf
@@ -3,9 +3,8 @@ socket_path=/var/run/nmd.socket
 socket_user=root
 socket_group=wheel
 socket_mod=660
-#socket_mod=600
-stderr_log_level=INFO
-#stderr_log_level=WARNING
+#stderr_log_level=INFO
+stderr_log_level=WARNING
 
 [SYSTEM]
 rcconf_file=../doc/rc.conf
