--- a/doc/nmdaemon.conf
+++ b/doc/nmdaemon.conf
@@ -10,3 +10,6 @@ stderr_log_level=INFO
 rcconf_file=../doc/rc.conf
 #rcconf_file=/etc/rc.conf
 rcconf_backups=3
+resolvconf_file=../doc/resolv.conf
+#resolvconf_file=/etc/resolv.conf
+resolvconf_backups=3
