--- a/doc/nmdaemon.conf
+++ b/doc/nmdaemon.conf
@@ -3,13 +3,11 @@ socket_path=/var/run/nmd.socket
 socket_user=root
 socket_group=wheel
 socket_mod=660
-stderr_log_level=INFO
-#stderr_log_level=WARNING
+#stderr_log_level=INFO
+stderr_log_level=WARNING
 
 [SYSTEM]
-rcconf_file=../doc/rc.conf
-#rcconf_file=/etc/rc.conf
-rcconf_backups=3
-resolvconf_file=../doc/resolv.conf
-#resolvconf_file=/etc/resolv.conf
-resolvconf_backups=3
+rcconf_file=/etc/rc.conf
+rcconf_backups=5
+resolvconf_file=/etc/resolv.conf
+resolvconf_backups=5
