Improve DHCP management in rc.conf

--- a/doc/rc.conf
+++ b/doc/rc.conf
@@ -1,5 +1,4 @@
 #ifconfig_em1_aliases="inet 192.168.213.212/24 inet 10.0.0.252 netmask 255.255.0.0 inet 10.1.0.252 netmask 0xffff0000"
-defaultrouter="192.168.212.1"
 gateway_enable="YES"
 ifconfig_bridge1="SYNCDHCP"
 ifconfig_em0="inet 192.168.212.215 netmask 255.255.255.0"
@@ -10,6 +9,7 @@ ifconfig_em1="inet 192.168.213.211 netmask 255.255.255.0"
 ifconfig_epair1a="SYNCDHCP"
 ifconfig_epair2a="SYNCDHCP"
 ifconfig_ipsec0="SYNCDHCP"
+ifconfig_re0="DHCP"
 ifconfig_tun0="DHCP"
 ifconfig_tun1="DHCP"
 ifconfig_usbus0="SYNCDHCP"
